<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyBackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_chat" />

        <EditText
            android:id="@+id/siEtxEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email_phone"
            android:inputType="textEmailAddress"
            android:padding="9dp" />

        <EditText
            android:id="@+id/siEtxPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="9dp" />

        <TextView
            android:id="@+id/tvDontHaveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:padding="9dp"
            android:text="@string/dont_have_an_account" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="@string/signin"
            app:cornerRadius="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/siBtnGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_google"
                android:padding="15dp"
                android:text="@string/googel"
                android:textColor="@color/black"
                app:cornerRadius="4dp" />

            <Button
                android:id="@+id/siBtnFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/fb_color"
                android:drawableLeft="@drawable/ic_baseline_facebook_24"
                android:padding="15dp"
                android:text="@string/facebook"
                app:cornerRadius="4dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/siTvSignUpPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/signup_with_phone"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />
</LinearLayout>
