<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/sbtnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/viewProfile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"
            android:src="@drawable/ic_user" />

        <ImageView
            android:id="@+id/addProfile"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="-30dp"
            android:layout_marginEnd="-20dp"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_add_circle_24"
            app:tint="@color/fb_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/username1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/setxUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:ems="10"
                android:hint="@string/sp_abinash"
                android:inputType="textPersonName"
                android:padding="5dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/status"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText

                android:id="@+id/setxStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
               android:textColor="@color/white"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="5dp"
               android:hint="@string/last_message"
               />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sBtnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_backgrount"
            android:padding="5dp"
            android:text="@string/save"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/linear_background"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_privacy"
            app:drawableTint="@color/colorPrimary" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="@string/about_us"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_error_24"
            app:drawableTint="@color/colorPrimary" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="@string/invite_a_friend"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_groups_24"
            app:drawableTint="@color/colorPrimary" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="@string/help"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_baseline_help_24"
            app:drawableTint="@color/colorPrimary" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="@string/notification"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_notifications_24"
            app:drawableTint="@color/colorPrimary" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_share_24"
            app:drawableTint="@color/colorPrimary" />


    </LinearLayout>
</RelativeLayout>